infra/k8s/payments-depl.yaml
# Payments service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-payments
  template:
    metadata:
      labels:
        app: ticketing-payments
    spec:
      containers:
        - name: ticketing-payments
          # image: us.gcr.io/ticketing-dev-id/payments
          image: pashkoostap/ticketing-payments
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-payments-srv
spec:
  selector:
    app: ticketing-payments
  ports:
    - name: ticketing-payments
      protocol: TCP
      port: 4000
      targetPort: 4000
# Payments mongo DB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-payments-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-payments-mongo
  template:
    metadata:
      labels:
        app: ticketing-payments-mongo
    spec:
      containers:
        - name: ticketing-payments-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-payments-mongo-srv
spec:
  selector:
    app: ticketing-payments-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
