infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ticketing-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: ticketing-auth-srv
              servicePort: 4000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: ticketing-tickets-srv
              servicePort: 4001
          - path: /api/orders/?(.*)
            backend:
              serviceName: ticketing-orders-srv
              servicePort: 4002
          - path: /?(.*)
            backend:
              serviceName: ticketing-client-srv
              servicePort: 3000
